made the map work correctly on mobile

--- a/src/app/static/css/map.css
+++ b/src/app/static/css/map.css
@@ -116,9 +116,13 @@ body.map-page {
 .map-image {
     display: block;
     max-width: none;
-    pointer-events: none;
+    -khtml-user-drag: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
     user-select: none;
-    -webkit-user-drag: none;
+    -webkit-touch-callout: none;
+    pointer-events: none;
 }
 
 .spot-overlay {
